manifests/step-ca/certificates.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: step-ca
  labels:
    app.kubernetes.io/name: step-ca
    app.kubernetes.io/component: certificates
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: step-ca
      app.kubernetes.io/component: certificates
  ingress:
  - toPorts:
    - ports:
      - port: "9000"
    fromEntities:
    - all
---
apiVersion: v1
kind: Service
metadata:
  name: step-ca
  labels:
    app.kubernetes.io/name: step-ca
    app.kubernetes.io/component: certificates
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: step-ca
    app.kubernetes.io/component: certificates
  ports:
  - name: api
    port: 9000
    targetPort: api
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: step-ca
  labels:
    app.kubernetes.io/name: step-ca
    app.kubernetes.io/component: certificates
spec:
  replicas: 1
  serviceName: step-ca
  selector:
    matchLabels:
      app.kubernetes.io/name: step-ca
      app.kubernetes.io/component: certificates
  template:
    metadata:
      labels:
        app.kubernetes.io/name: step-ca
        app.kubernetes.io/component: certificates
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: step-certificates
        image: cr.step.sm/smallstep/step-ca:0.25.2
        command: [/usr/local/bin/step-ca]
        args: [/home/step/config/ca.json]
        securityContext:
          readOnlyRootFilesystem: true
        ports:
        - name: api
          containerPort: 9000
        livenessProbe:
          httpGet:
            path: /health
            port: api
            scheme: HTTPS
          initialDelaySeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: api
            scheme: HTTPS
          initialDelaySeconds: 5
        volumeMounts:
        - name: root-cert
          mountPath: /home/step/certs/root
          readOnly: true
        - name: intermediate-cert
          mountPath: /home/step/certs/intermediate
          readOnly: true
        - name: config-rw
          mountPath: /home/step/config
          readOnly: true
        - name: database
          mountPath: /home/step/db
          readOnly: false
        - name: templates
          mountPath: /home/step/templates
          readOnly: true
      volumes:
      - name: setup-config
        configMap:
          name: step-ca-setup-config
          defaultMode: 0777
      - name: issuer-provisioner
        secret:
          secretName: step-ca-issuer-provisioner
      - name: issuer-provisioner-password
        secret:
          secretName: step-ca-issuer-provisioner-password
      - name: root-cert
        secret:
          secretName: step-ca-root
      - name: intermediate-cert
        secret:
          secretName: step-ca-intermediate
      - name: config
        configMap:
          name: step-ca-config
      - name: config-rw
        emptyDir: {}
      - name: templates
        configMap:
          name: step-ca-templates
  volumeClaimTemplates:
  - metadata:
      name: database
      labels:
        app.kubernetes.io/name: step-ca
        app.kubernetes.io/component: certificates
    spec:
      storageClassName: nas-nfs
      accessModes: [ReadWriteOnce]
      resources:
        requests:
          storage: 1Gi
