manifests/step-ca/issuer.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: step-issuer
  labels:
    app.kubernetes.io/name: step-ca
    app.kubernetes.io/component: issuer
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: step-ca
      app.kubernetes.io/component: issuer
  ingress:
  - toPorts:
    - ports:
      - port: api
    fromEntities:
    - kube-apiserver
  egress:
  - toPorts:
    - ports:
      - port: api
    toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: step-ca
        app.kubernetes.io/component: step-ca
---
apiVersion: v1
kind: Service
metadata:
  name: step-issuer
  labels:
    app.kubernetes.io/name: step-ca
    app.kubernetes.io/component: issuer
spec:
  selector:
    app.kubernetes.io/name: step-ca
    app.kubernetes.io/component: issuer
  ports:
  - name: api
    port: 443
    targetPort: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: step-issuer
  labels:
    app.kubernetes.io/name: step-ca
    app.kubernetes.io/component: issuer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: step-ca
      app.kubernetes.io/component: issuer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: step-ca
        app.kubernetes.io/component: issuer
        cluster.local/allow-apiserver-egress: "true"
    spec:
      containers:
      - name: step-issuer
        image: cr.step.sm/smallstep/step-issuer:0.9.1
        ports:
        - name: api
          containerPort: 443
      terminationGracePeriodSeconds: 10
